# School-arduinoProject

./: CMakeLists.txt  README.md
Android/: build.gradle
Android/app/: build.gradle
Android/app/src/androidTest/java/dkarlsso/arduinoproject/: ExampleInstrumentedTest.java
Android/app/src/main/: AndroidManifest.xml
Android/app/src/main/java/dkarlsso/arduinoproject/: Constants.java  MainActivity.java  MessageHandler.java
Android/app/src/main/java/dkarlsso/arduinoproject/connection/: ArduinoConnector.java
Android/app/src/main/java/dkarlsso/arduinoproject/model/: Action.java  ArduinoDTO.java  ArduinosStatusDTO.java
Android/app/src/main/res/layout/: activity_main.xml
Android/app/src/main/res/menu/: menu_main.xml
Android/app/src/main/res/values/: strings.xml
Android/app/src/test/java/dkarlsso/arduinoproject/: ExampleUnitTest.java
Android/gradle/wrapper/: gradle-wrapper.properties
Arduino/: readme.md  wifi_ap_canbus.ino
Arduino/CanBusCommon/: CanMessageHandler.cpp  CanUtility.cpp  CanUtility.h  canbus_error_defs.h
Arduino/ProjectLibrary/: HttpHandler.h  Light.cpp  LightMsgHandler.h  TempMsgHandler.cpp  TempMsgHandler.h  TemperatureSensor.h  Timer.h  arduino_id_defs.h
Arduino/temp_canbuss/: temp_canbuss.ino
CanBusCommon/: CanMessageHandler.h  README.md  canbus_datamappings_defs.h  canbus_defs.h  canbus_global_defs.h  canbus_id_defs.h  canbus_struct_defs.h
Canbus/: mcp2515.cpp
ProjectLibrary/: Light.h  MessageHandler.h  RequestParam.h
wifi_canbus/: wifi_canbus.ino
